<resources>
    <string name="app_name">Android_Projet</string>
    <string name="louer">Louer</string>
    <string name="acheter">Acheter</string>
    <string name="search">Entrez votre recherche</string>
    <string name="ask_budget">Entrer votre budget</string>
    <string name="check_appartment">Appartement</string>
    <string name="check_house">Maison</string>
    <string name="button_search">Rechercher</string>
    <string name="ask_max_budget">Budget maximum</string>
    <string name="ask_location">Entrer votre localisation</string>
    <string name="title_location">Localisation</string>
    <string name="title_logement">Trouver un logement</string>
    <string name="myapp">SABRITER</string>
    <string name="name">name</string>
    <string name="trier">Trier par</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="se_connecter">se connecter</string>
    <string name="s_inscrire">s\'inscrire</string>
    <string name="email">email</string>
    <string name="mes_informations">Mes informations</string>
    <string name="deconnexion">DECONNEXION</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte ?</string>

    <string-array name="tri">
        <item>Plus récent</item>
        <item>Plus ancien</item>
        <item>Prix croissant</item>
        <item>Prix décroissant</item>
    </string-array>
</resources>