<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:background="@color/blue">
    </View>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myapp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/topbar"
        app:layout_constraintBottom_toBottomOf="@+id/topbar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GPS"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue2"
        android:layout_marginEnd="80dp"
        app:layout_constraintTop_toTopOf="@id/topbar"
        app:layout_constraintBottom_toBottomOf="@+id/topbar"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <ImageButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@color/blue"
        android:src="@drawable/profile"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/topbar"
        app:layout_constraintStart_toEndOf="@id/mapButton"
        app:layout_constraintTop_toTopOf="@id/topbar"
        />



    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mes_informations"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/titleLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="parent"

        />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittextebackground"
        android:hint="@string/email"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/titleLocation"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/mdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="@id/titleLocation"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:autofillHints="mot de passe"
        android:inputType="textPassword"
        android:background="@drawable/edittextebackground"
        android:hint="@string/mot_de_passe"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/mdp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deconnexion"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        />







</androidx.constraintlayout.widget.ConstraintLayout>
